# Code

./: .gitignore  README.md  corlor.pl  learn.scm  push.sh
R/: .Rhistory  c4-4.r  c6-3.r  c6-4.r  c7-2.r
alg/: README.md
avsc/: user.json
brick/: brick  brick.cpp  cscope.out
c/: inline_assembly.c  packtest.c  struct.c
c/cmake/example3/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Demo  Makefile  cmake_install.cmake  config.h  install_manifest.txt  main.cc
c/cmake/example3/Testing/Temporary/: CTestCostData.txt
c/cmake/example3/math/: CMakeLists.txt  Makefile  cmake_install.cmake
cpp/: README.md  circlr_queue.cpp  mt_iterator_dir.cpp  produce_cosume.cpp  uuid.cpp  uuid.h  va_list  va_list_template
docs/: flume-test.tex  hadoop.blg  hadoop.dvi  hadoop.tex  hadoop.toc  lamp.tex  leveldb.md  leveldb.tex
elm/: first.elm
go/: polar2cartesian.go
gp/: 3d-exmaple.gp  bse.gp  data  enhanced.gp  eps.gp  first.gp  label.gp  month-water.gp  x2y2.gp
hs/: first.hs  learn.hs  test.hs
java/: CheckFile.c  CheckFile.h  CheckFile.java  Emacs.java  Exam.java  HeapOOM.java  HelloWorld.java  JVM.java  JavaVMStackSOF.java  MapMemeryBuffer.java  Person.java  RawHello.java  ReferenceCountingGC.java  SimpleClass.java  SyntheticMethodTest2.java  mess_en_US.properties  mess_zh_CN.properties  test
latex/: geany-test  geany_run_script.sh
linux-game/: ctype_game.c  peer_ctype_game.c  server
lisp/: b.el  cd.fas  cd.lib  cd.lisp  eintr.el  el.el  emacs.el  learn.el  list.el
perl/: README.md  file.pl  gencmake.pl  io.pl  money.pl  perl.xls  sort.pl  system.pl  (+1 more)
(+412 files in other folders)
